kv v2 display bugs (#7307)
* fix switch css

* allow breadcrumbs container to grow if it's overflowed so that it's still usable

* close the dropdowns on destructive actions that cause a route refresh

* use new attachCapabilities for context menus on auth methods to get rid of an error

--- a/ui/app/styles/components/toolbar.scss
+++ b/ui/app/styles/components/toolbar.scss
@@ -25,7 +25,7 @@
     min-width: 190px;
   }
 
-  label {
+  label[for='namespace'] {
     padding: $spacing-xs;
     color: $grey;
   }
